--- a/folder1/folder2/folder3/package.xml
+++ b/folder1/folder2/folder3/package.xml
@@ -3,6 +3,9 @@
     <types>
         <members>A10</members>
         <members>A13</members>
+        <members>A15</members>
+        <members>A150</members>
+        <members>A151</members>
         <name>ApexClass</name>
     </types>
 </Package>
