--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>50.0</version>
+    <version>52.0</version>
     <types>
         <members>Summer19</members>
         <members>Test_animation</members>
@@ -301,6 +301,7 @@
         <name>ApexEmailNotifications</name>
     </types>
     <types>
+        <members>ACCObjTest1Page</members>
         <members>ANAWeeklyOppt</members>
         <members>ANA_CreateOEMeetings</members>
         <members>ANA_MassUpdate</members>
