--- a/package.xml
+++ b/package.xml
@@ -8,6 +8,8 @@
     <types>
         <members>A0</members>
         <members>A000</members>
+        <members>A00000SXaQxc</members>
+        <members>A00000UipcOVCKCqWy</members>
         <members>A0001</members>
         <members>A0009</members>
         <members>A0071</members>
