--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>51.0</version>
+    <version>50.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -226,6 +226,7 @@
         <members>MySampleApexClass</members>
         <members>MySampleApexClass1</members>
         <members>N897</members>
+        <members>N987</members>
         <members>NA1ApexClass1</members>
         <members>NA23Class1</members>
         <members>NA23Class2</members>
