--- a/package.xml
+++ b/package.xml
@@ -468,6 +468,7 @@
     </types>
     <types>
         <members>Default_New1</members>
+        <members>Default_Test1233</members>
         <members>Default_TestCommunity</members>
         <name>Audience</name>
     </types>
