--- a/package.xml
+++ b/package.xml
@@ -3,6 +3,8 @@
     <types>
         <members>A0</members>
         <members>A000</members>
+        <members>A00000AADmnDec</members>
+        <members>A00000ABdkKerh</members>
         <members>A00000AOZGddBpOrC</members>
         <members>A00000ASDXlkQJKQ</members>
         <members>A00000LgKTWXnk</members>
