--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>50.0</version>
+    <version>51.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -349,6 +349,7 @@
         <members>pr</members>
         <members>publicclass15032016</members>
         <members>rtclass1</members>
+        <members>s567</members>
         <members>sa123</members>
         <members>sai007</members>
         <members>sanity2</members>
