--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>51.0</version>
+    <version>52.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -483,6 +483,15 @@
         <members>Case</members>
         <members>Lead</members>
         <name>AutoResponseRules</name>
+    </types>
+    <types>
+        <members>SreeramBot</members>
+        <name>Bot</name>
+    </types>
+    <types>
+        <members>SreeramBot.v1</members>
+        <members>SreeramBot.v2</members>
+        <name>BotVersion</name>
     </types>
     <types>
         <members>DataCloudGeoLocation</members>
