--- a/package.xml
+++ b/package.xml
@@ -3378,6 +3378,7 @@
         <members>SEObject1__c</members>
         <members>SKVAug16Obj1__c</members>
         <members>SKVObject1__c</members>
+        <members>SKnew1__c</members>
         <members>SMobj1__c</members>
         <members>SObj1__c</members>
         <members>SSObj1__c</members>
@@ -5412,6 +5413,7 @@
     </types>
     <types>
         <members>ACCObjt1__c.QuoteLineItem</members>
+        <members>SKnew1__c.Wr1</members>
         <name>WorkflowRule</name>
     </types>
 </Package>
