--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>51.0</version>
+    <version>52.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -20,6 +20,7 @@
         <members>A0345</members>
         <members>A036</members>
         <members>A0456</members>
+        <members>A045678</members>
         <members>A052</members>
         <members>A081</members>
         <members>A08123</members>
@@ -46,16 +47,25 @@
         <members>A19</members>
         <members>A20</members>
         <members>A201</members>
+        <members>A28</members>
+        <members>A29</members>
+        <members>A3</members>
         <members>A30</members>
+        <members>A300</members>
+        <members>A301</members>
+        <members>A31</members>
         <members>A32</members>
         <members>A35</members>
         <members>A55</members>
         <members>A57</members>
+        <members>A97</members>
+        <members>A98</members>
         <members>AAClsABPSiWR</members>
         <members>AN1</members>
         <members>ANew1</members>
         <members>ANew2</members>
         <members>ANewCls1</members>
+        <members>AP123</members>
         <members>AP4</members>
         <members>AR1</members>
         <members>AR2</members>
